--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Genuine RolePlay</title>
+    <title>Fice City ROLEPLAY</title>
     <link rel="shortcut icon" href="./sitetemplate/favicon.png" type="image/png">
     <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
@@ -89,15 +89,15 @@
                     </div>
                     <div class="col-xl-7 info">
                         <div class="name_project bounceInRight animated">
-                            <div class="name" style="color: #ffffff;">GENUINE</div>
+                            <div class="name" style="color: #ffffff;">FC:RP</div>
                             <div class="type" style="color: #ffffff; background-color: #1b56d9;">RolePlay</div>
                         </div>
                         <div class="slogan bounceInRight animated fast" style="color: #ffffff;">
-                            7 წელი თქვენთან ერთად
+                            FCRP ეს არის საქართველოს №1 SA-MP პროექტი, რომელიც შეიქმნა 2025 წელს. მხოლოდ ჩვენთან შეძლებთ ღრმად ჩაეფლოთ ვირტუალურ სამყაროში და მიიღოთ მაქსიმალური სიამოვნება თამაშისგან!
                         </div>
                         <div class="desc fadeInUp animated fast" style="color: #a5b7eb;">
-                            GENUINE-RP არის ერთ-ერთი ხარისხიანი პროექტი, <br> რომელიც ქართულ სამპში გამოჩენილა. <br><br> ჩვენ გთავაზობთ ისეთ სათამაშო მოდსა და ადმინისტრაციას, <br> რომელიც არცერთ სხვა ქართულ სერვერს არ უნახავს.
-
+                            Fice City ROLEPLAY არის ერთ-ერთი ხარისხიანი პროექტი, <br> რომელიც ქართულ სამპში გამოჩენილა. <br><br> ჩვენ გთავაზობთ ისეთ სათამაშო მოდსა და ადმინისტრაციას, <br> რომელიც არცერთ სხვა ქართულ სერვერს არ უნახავს.
+                        
                         </div>
                         <div style="display: flex;">
                             <a href="https://www.mediafire.com/file/foa8jv8f5bd9ej8/%255Bsaintcityrp.blogspot.com%255D_GTA_-_Hot_Coffee.rar/file" target="_blank" class="play_btn fadeInUp animated" style="background-color: #1b56d9; ">  კლიენტი</a>
